apps/donation-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: donation-api
  labels:
    app.kubernetes.io/name: donation-api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: donation-api
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
