apps/donation-api/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: donation-api
  labels:
    app.kubernetes.io/name: donation-api
spec:
  to:
    kind: Service
    name: donation-api
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
